src/components/SkillsSection/index.module.css
.h1 {
  text-align: center;
  font-weight: 100;
  margin: 0;
  /* position: absolute; */
  width: 50%;
  text-align: center;
  /* top: 24px; */
  line-height: 1;
  font-size: clamp(64px, 7vw, 108px);
  word-wrap: break-word;
}

.section {
  width: 100vw;
  height: 400vh;
  color: #cdc6be;
  position: relative;
}

.headers {
  width: 100vw;
  /* position: absolute; */
  transform-style: preserve-3d;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.primary_header {
  margin: 0;
  text-align: center;
  line-height: 1;
  font-size: clamp(88px, 20vw, 250px);
}

.container {
  height: 100vh;
  width: 100vw;
  position: absolute;
  top: 0;
  display: flex;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

}

.in_view {
  position: fixed;
}

.out_of_view {
  position: absolute;
  top: 350vh;
}

.text_container {
  width: 100vw;
  height: 150vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  position: absolute;
}

.contact_element .text {
  font-size: clamp(32px, 4vw, 64px)
}


.in_view .contact_element{
  position: absolute;
  top: 50%;
  left: 50%;
}

.stars {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: -12px;
  opacity: 0.7;
}

@media (max-width: 600px) {
  .stars {
    transform: scale(0.8);
  }
}

.star_wrap {
  display: flex;
  flex-direction: row;
  gap: 2px;
  align-items: center;
  justify-content: center;
  border: 1px solid #f2ebd2;
  border-radius: 32px;
  padding: 4px 8px;
}

.star_stroke{
  display: grid;
  place-items: center;
  width: 12px;
  height: 12px;
  background: #f2ebd2;
  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
}
.star_stroke .star_empty{
  width: 70%;
  aspect-ratio: 1;
  background: #000;
  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
}

